Almost finished OMGYES (pun intended).

--- a/2025/OMGYES/OMGYES.tex
+++ b/2025/OMGYES/OMGYES.tex
@@ -1,8 +1,8 @@
 \chapter{OMGYES}{Rob Perkins \& Lydia Daniller}
 
-Technically not a book, but a pay-per-view series of webpages (\href{https://www.omgyes.com/}{omgyes.com}) with text and videos.
+Technically not a book, but a pay-per-view series of webpages (\href{https://www.omgyes.com/}{omgyes.com}) with text and videos. Technically it is a three-part collection, but parts 2 and 3 are much less interesting. (Also, the women in part 1 are incredibly beautiful, whilst the women in the other parts are explicitly unattractive.)
+%\bookpart{Essentials}
 
-\bookpart{Essentials}
 \section{Framing}
 \begin{outline}
 \1 You should frame CL specifically \emph{not} as "let's get you to orgasm" but rather as "let's discover what gets you maximum pleasure". An orgasm should not be framed as a goal but as a byproduct. It's the body's way of saying it has been saturated, like a burp after a big meal.
@@ -24,22 +24,21 @@ Technically not a book, but a pay-per-view series of webpages (\href{https://www
 
 \section{Signalling}
 \begin{outline}
-\1 Allegedly, the biggest reason women don’t give their partner feedback is being afraid to hurt their feelings.
+\1 The biggest reason women don’t give their partner feedback is being afraid to hurt their ego.
 
 \1 Some ways to give directions:
 	\2 Exercise for her: masturbate (using just fingers) with the intent of exploring all possible ways that can give pleasure, to actually know what to tell a partner.
 		\3 One woman had to use a mirror to know how to describe it.
-		\3 One woman sits in her man's lap, back facing him, and uses his hands to teach his muscle-memory what feels good on her.
-
+		\3 One woman sits in her man's lap, back facing him, and uses his hands to teach his muscle memory what feels good on her.
 		\3 What feels good depends on the stage of coreplay she is in.
 
 	\2 One way to avoid criticism is to use Newspeak: bad things are just "good", good things get a much larger reaction.
-	\2 Put made-up labels on things you like, so that you don't fall into the "that one thing you did" trap.
+	\2 Invent labels for things you like, so that you don't fall into the "that one thing you did" trap.
 
 
 \1 Some ways to ask for directions:
-	\2 Demonstrated binary questions work well: "Higher like this [demonstrate] or lower like this [demonstrate]?", softer/harder, faster/slower, ...
-	\2 
+	\2 Demonstrated binary questions: \textsl{"Higher like this [demonstrate] or lower like this [demonstrate]?"} and similarly for softer/harder, faster/slower, ...
+	\2 Outside the bedroom, just be curious to discover what she knows works (and when).
 
 \1 Testimonials:
 	\2 One woman says she doesn't like her nor her man using words to indicate what feels good.
@@ -53,7 +52,7 @@ Technically not a book, but a pay-per-view series of webpages (\href{https://www
 	\2 One woman caresses the man's thigh when it's good and taps when it's bad.
 \end{outline}
 
-\section{Consistency}
+\section{Consistency}\label{omgyes:sec:consistency}
 \begin{outline}
 \1 For 2 in 3 women, whatever motion is happening when she feels the orgasm "bubble up" (which probably feels the same as with men), needs to be locked in \emph{exactly the same} until the orgasm. That means:
 	\2 Do not pause. Not even for 1 second. Edging breaks the buildup.
@@ -75,7 +74,7 @@ Technically not a book, but a pay-per-view series of webpages (\href{https://www
 
 \1 Signalling for this is mostly just "that's it, keep going, don't stop".
 
-\1 Demo video (ngl she has fantastic boobs and a nice vulva):
+\1 \textsl{Demo video (ngl she has fantastic boobs and a nice vulva)}:
 	\2 To wake up the vulva, close the outer labia, and drag them in circles.
 	\2 Then, to open up the lips, stroke in the middle between them from bottom to top.
 	\2 Once she is wet at the bottom of the vestibule, brush the lubrication upwards using a finger-walking motion.
@@ -83,19 +82,18 @@ Technically not a book, but a pay-per-view series of webpages (\href{https://www
 \end{outline}
 
 
-\section{Rhythm}
+\section{Rhythm}\label{omgyes:sec:rhythm}
 \begin{outline}
 \1 \emph{Rhythm}: repeating pattern of (the hits of) whatever motion you're doing.
 	\2 \emph{Raindrops}: random delays between hits.
 	\2 \emph{Skipping}: constant, big delay between hits. Can be because you skip half of your motion (e.g.\ only do left strokes, not right strokes).
+		\3 Purposefully skipping some strokes, but doing them every so-often unexpectedly, is essentially a form of edging and they love it.
 	\2 \emph{Back-to-back}: no delay between hits. No room to breathe.
 	\2 \emph{Pulsating}: hits overlap. Overstimulation, like a vibrator.
 
-\1 During penetration, rhythm should not come from long in-out strokes, but rather from staying inside and vibrating your pubic bone on her (I guess in the least spastic way you can manage). This is called \emph{rocking}.
+\1 \emph{Rocking}: during penetration, rhythm should not come from long in-out strokes, but rather from staying inside and vibrating your pubic bone on her (in the least spastic way you can manage).
 
-\1 \emph{Tapping} is apparently not so uncommon as a preferred motion over stroking.
-
-\1 For women with a really sensitive clitoris, do not touch the head directly and do not use repetitive stimulation. Rather, use firm pressure below or around the head, and play with the vulva more.
+\1 \emph{Tapping} (not pressing) is apparently not so uncommon as a preferred motion over rubbing.
 
 \1 Demo video 1:
 	\2 She likes a kind of morse code tapping on her clitoral hood: start with 20 seconds of fast taps. Then 20 seconds of slow taps as a kind of edging (the clitoris wants faster stimulation, but you're teasing it by withholding). Then after that a mix of both. She literally does this from start to orgasm.
@@ -103,15 +101,232 @@ Technically not a book, but a pay-per-view series of webpages (\href{https://www
 	
 \1 Demo video 2:
 	\2 To wake up the vulva, she gives light taps all over it, like an ant feeling with an antenna.
-	\2 She then alternates between putting firmer taps on the inside of her labia minora, and firmly swiping the labia minora outwards. 
+	\2 She then alternates between pressing on the inside of her labia minora, and firmly swiping the labia minora outwards. 
 	\2 Finally, to orgasm, she wags her finger somewhere at the bottom of the vulva (either fourchette or introitus, I can't tell), nowhere near the clit and not fingering inside. I believe this is called \emph{shallowing}.
 \end{outline}
 
 
-\section{Layering}
+\section{Layering}\label{omgyes:sec:layering}
+\begin{outline}
+\1 The clitoral head is \emph{very} sensitive.
+	\2 One woman says touching the head gives a sharp pain like pushing a Q-tip too far in the ear.
+	\2 One woman says that at best, it feels like somebody trying to tickle you very hard. It is unpleasant and you would do anything to make them stop.
+	\2 The general consensus seems to be that direct touch equals actual \emph{pain}.
 
-\bookpart{Inner Pleasure}
+\1 \emph{Layering}: stimulating the clitoral head indirectly through successive layers of friction.
+	\2 The hood wraps around the head and dampens stimulation enough to be bearable.
+	\2 The labia majora wrap around the head and attenuate much more. They can also be used to stimulate a larger area.
+	\2 Underwear works as another friction layer around the labia majora.
+
+\1 Finding the right layer, or balance of layers:
+	\2 You can escalate from very indirect towards direct, until she indicates it is too much.
+	\2 You can also use "like this or like this?" signalling.
+
+\1 Playing with the hood:
+	\2 Softest: caress over it, without moving the skin.
+		\3 \textsl{Demo video 3}:
+			\4 She says she never uses her index finger to touch herself, since it is too strong. Only middle and ring finger.
+			\4 She shows caressing of the skin.
+	
+	\2 Harder: drag the hood skin around in circles over the head.
+		\3 \textsl{Demo video 2}:
+			\4 She shows how she kneads the front commissure and the hood.
+			\4 She also shows how to stimulate the head indirectly from the side, by stroking the skin to the left and right of the front commissure (but still inside the labia majora).
+		
+	\2 Hardest: press onto the hood and move the head around underneath.
 
 
-\bookpart{Toy Pleasure}
+\1 Playing with the labia majora:
+	\2 Softest: squeezing the labia majora together between index finger and thumb.
+	\2 Harder: squeeze the labia majora, and move them side-to-side, in-and-out, or in circles.
+	\2 Hardest: the clit sandwich.
+		\3 \textsl{Demo video 1}:
+			\4 She shows how she puts one hand over the introitus (or the part of the labia majora around it), one at the start of the front commissure, and then rubs side-to-side with both hands in opposite directions, so that the head receives indirect shearing/torque.
+
+\1 Beware: 
+	\2 For women with a really sensitive head, even when warmed up:
+		\3 Do not touch the head directly and do not use repetitive stimulation on the hood. 
+		\3 Rather, use firm pressure around the head, and play with the labia/introitus more.
+	\2 For all women: 
+		\3 Err on the side of using too many layers for too long.
+		\3 Be careful with upward strokes more than downward strokes.
+\end{outline}
+
+\section{Hinting}\label{omgyes:sec:hinting}
+\begin{outline}
+\1 A lot of sexual pleasure for women is in the \emph{anticipation of} stimulation.
+	\2 As with many things, the game is to \emph{do anything except the thing}.
+	\2 One woman phrased it as \emph{disappointment} being pleasurable. Not disappointment that a given part (vulva, head or introitus) is \emph{ignored}, but rather that \emph{everything points towards it not being ignored} and yet it doesn't receive touch.
+
+\1 \emph{Genital hinting}: touching every body part \emph{except} the vulva.
+	\2 The closer to the vulva, the better, specifically on the mons pubis and between the thighs.
+
+\1 \emph{Vaginal hinting}: skating around in the vestibule, teasing around the introitus, but never entering.
+	\2 Can be done with a finger, tongue, or penis.
+	\2 Specifically builds anticipation for penetration (see also the testimonials).
+
+\1 \emph{Clitoral hinting}: tracing ovals around the head, from the top of the front commissure, down the side of the front commissure, to the frenulum, and back up.
+	\2 \textsl{Demo video 4}: after every few ovals, don't go up from the side, but go straight up, over the hood. This is the payoff.
+
+\1 Most common mistakes when hinting:
+	\2 Not enough action: if there isn't enough payoff between hints, the vulva doesn't know what to yearn for. It can't just be teasing all the time.
+	\2 Not long enough: you need multiple sets of hints and payoffs to establish what to anticipate.
+	\2 Not slow enough: anticipation is built by dragging out the path of your strokes to really sell the illusion that the payoff is coming.
+
+\1 Testimonials:
+	\2 One woman literally says: "I tell my husband in advance that he shouldn't listen when I'll say 'Put it in...' Because I know it’ll be even better the longer he holds out."
+	\2 One woman says that the longer the penetration is hinted at (through vaginal hinting, shallowing, and rubbing a finger or penis all along the vulva but skating past the introitus), the better her orgasms are.
+	\2 One woman says that with enough vaginal hinting, she gets distracted enough by the pleasure that the first penetration is a complete surprise, and that surprise is breathtaking.
+\end{outline}
+
+\section{Staging}
+\begin{outline}
+\1 OMGYES uses a 4-stage coreplay system:
+\begin{enumerate}
+	\item Foreplay
+	\item Warmup ($=$ first kiss $+$ establishment)
+	\item Build-Up ($=$ tension $+$ escalation)
+	\item Approach ($=$ pre-orgasm)
+	\item Orgasm
+	\item Moreplay
+\end{enumerate}	
+
+\1 When measuring the pleasure of a particular motion, the stage of arousal matters a lot.
+	\2 So, if you find a technique that makes her go crazy in stage 4, it may not work in stage 2.
+
+\1 Foreplay: do everything except the thing.
+	\2 Whatever you do, do not involve the vulva or the nipples.
+	\2 Lightly trace patterns on her skin at the infamous \href{https://www.nature.com/articles/nn.2312}{3 cm/s}.
+	\2 Give kisses along the neck, stomach, arms, ...
+	\2 Anticipation builds across a traced path, so long, slow motions are the best.
+
+\1 Warmup: shy clit.
+	\2 A rule of thumb: the longer a woman is aroused, 
+		\3 the less sensitive the clitoral head becomes
+		\3 the more pleasant penetration becomes
+	\2 The clit is still too sensitive, so be indirect.
+		\3 Hinting (\autoref{omgyes:sec:hinting})
+		\3 Layering (\autoref{omgyes:sec:layering}): if you do stimulate the head, at least come at it from above.
+		\3 Foreplay strokes: almost no pressure, slow, long.
+	\2 \emph{Painting}: stroking between the labia minora, especially to spread around the wetness that comes from the introitus.
+		\3 I've noticed that most women do this instinctively in the demo videos.
+
+\1 Buildup: greedy clit.
+	\2 Most women prefer that the focus is now on the hood and head.
+	\2 Women are split equally between caressing and dragging the hood, but \emph{without} firm pressure.
+		\3 High-intensity motions should still be kept short. 
+		\3 Indirect, low-intensity motions should be dragged out to settle in.
+	\2 The preferred shape of the motion varies a lot:
+		\3 Most women like vertical (up-and-down).
+		\3 Half of women like circular.
+		\3 Over a quarter like horizontal (side-to-side).
+		\3 Some like tall ovals, as in clitoral hinting.
+		\3 A minority likes point pressure (shallowing, tapping, pressing; \autoref{omgyes:sec:rhythm}).
+
+\1 Approach: hypno clit.
+	\2 Which motion from buildup that starts approach is likely the one that caused the most intense stimulation: the deepest pressure and the most frequent directness.
+	\2 Keep the motion exactly as-is (\autoref{omgyes:sec:consistency}).
+
+\1 Orgasm:
+	\2 Although it's short, there are still techniques to alter it.
+	\2 Once (and only once) the orgasm begins, you can:
+		\3 Apply more pressure, especially on the front commissure.
+		\3 Pause and resume to "tease it out".
+		\3 Put a finger at (shallow) or in (penetration) the introitus.
+
+	\2 After orgasm, obviously she is refractory for 15 minutes.
+
+\1 Testimonials:
+	\2 One woman says: "When I’m not aroused yet, I really don’t like to have my head directly touched; but when I am, I really like pressure on te head. If you did that before I was turned on, it would just hurt."
+	\2 One woman says: "What feels good now doesn’t feel good even a minute before or after."
+	\2 One woman says: "Just because a particular technique was amazing when I was close to climax the night before, that doesn't mean it will feel good the next day at the start."
+\end{outline}
+
+
+\section{Surprise}
+\begin{outline}
+\1 When stimulating the clitoris, pleasure increases due to two counteracting effects:
+	\2 Synchronisation: it needs to see a pattern several times before aligning its rewards with it.
+	\2 Unpredictability: when it gets used to a repeated pattern, it becomes bored.
+
+\1 \emph{Set surprise}: switching between two motions only after repeating one enough. 
+	\2 You can repeat motions eventually. The clitoris has finite memory.
+	\2 You don't need to keep surprising her with new motions across sessions; when women masturbate, they converge on a reliable, small, fixed superset to deploy.
+
+\1 Supersets will get her to preorgasm, but preorgasm is incompatible with supersets.
+	\2 You should agree on a signal from her (which you should never \emph{ask for} during sex!) to indicate "stop supersetting, keep repeating this".
+	
+\1 \textsl{Demo video}:
+	\2 She shows the three moves in her buildup superset:
+		\3 Tapping on the hood.
+		\3 Painting, in her case in both directions.
+		\3 Arches (half-ovals) from one side of the front commissure to the other, over the hood. Once the head can tolerate it, the arches become ovals that graze the head from below.
+	\2 She shows her one move for approach, which is applying deep pressure on the hood and rubbing (not too fast, but definitely not slowly) in small circles centered on the hood.
+		\3 To hit every angle, she shifts the center of the circles left and right.
+		\3 She also widens and tightens the radius of the circles.
+\end{outline}
+
+\section{Accenting}
+\begin{outline}
+\1 Clitoral nerves are distributed asymmetrically and thus some spots feel better than others.
+	\2 One in four women have explicitly noticed they are left-/right-clitted.
+	\2 These hotspots also move around over time, sometimes daily.
+	\2 Figuring this out is really just some spice for an already-perfect routine.
+
+\1 \emph{Accenting}: applying more pressure, or a faster stroke, in one part of the path.
+	\2 To test an accent, do it at least 10 times.
+	\2 \textbf{DO NOT} accent upwards into the head. 
+	
+\1 \textsl{Demo video}: accenting upwards on the front commissure.
+	\2 She explicitly says that if she accidentally starts too low, it's painful and it's all lost.
+\end{outline}
+
+\section{Orbiting}
+\begin{outline}
+\1 During buildup, when the head is greedy, you can start working circles on it.
+
+- Softest: top of front commissure to frenulum.
+	- A variation is "tall ovals", which have a tighter bend at the top than a circle, so more friction.
+- Soft: top of front commissure to start of hood.
+	- The sides of the front commissure seem to be popular spots, probably because they allow deeper pressure. You can e.g.\ have wide ovals that circle the hood and pass by those sides, going soft on the hood and hard on the sides.
+- Hard: off-and-on, i.e.\ alternating those circles that end at the top of the hood with some that reach down to the exposed head.
+	- Has most variety because it allows surprise. 
+	- A variation of off-on is that the "off" is done with circles and the "on" is done using a tongue that paints down and up once.
+- Hardest: directly on the exposed head.
+
+- Pivoting is the smallest circle possible.
+- Figure 8 around the head and the introitus can be interesting since it's one stroke.
+
+- Hinting methods:
+	- Double circle: one hand does something around the clit, the other goes at half speed around the introitus to hint at penetration (\autoref{omgyes:sec:hinting}).
+	- Skipping part of the path also adds anticipation.
+
+\1 Some principles from other chapters apply here:
+	\2 Staging is important. The head won't respond well if it isn't warmed up.
+	\2 As with layering, finding the right pressure and location can be done through escalation until she stops you.
+	\2 When in doubt, slower is better.
+	\2 As with accenting, you need to try a variation at least 10 times.
+	\2 Related to accenting is that her clitoris may respond better clockwise vs.\ counterclockwise.
+
+\1 \textsl{Demo video 5}: she shows that her hotspot is usually upper left (left of front commissure), sometimes lower right (right of introitus), but never upper right.
+\end{outline}
+
+\section{Edging}
+\begin{outline}
+\1 \emph{Edging}: building to orgasm, then stopping right before the point-of-no-return.
+	\2 Hard edging: take away all genital stimulation. Let the orgasm completely fade away. Restart.
+	\2 Continuous edging: revert to lower-pleasure stimulation so that she stays built up, e.g.\ by painting rather than orbiting.
+	\2 Distraction edging: somewhat obscure technique where you literally do something like squeeze her butt to "Wtf?" her out of preorgasm. Jokermaxxing.
+
+\1 Testimonials:
+	\2 One woman says she still vividly remembers the best orgasm she ever had (and that it was with a guy who is not her husband), which was a two- edge 
+	\2 One woman says the best orgasms are after a "rollercoaster", and notes that edging is easy to do if the man is (1) attentive to physical changes (labia swelling) and (2) is in it just for pleasure, not for the orgasm.
+	\2 One woman says that the orgasm after edging is so overwhelming that she stops hearing, feels underwater, and has 10-second aftershocks.
+	\2 One woman says that if she does too many edge cycles, she can't get to orgasm.
+\end{outline}
+
+\section{Multiples}
+\begin{outline}
+\1 
+\end{outline}
 
